css/workshop.scss
---
---

@import "colors";

$backgroundColor: $nauts-blue;

// Primary/body text
$mainFont: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
$mainFontSize: 32px;
$mainFontWeight: 300;
$mainColor: $white;
$mainTextAlign: left;

// Vertical spacing between blocks of text
$blockMargin: 16px;

// Headings
$headingMargin: 0 0 $blockMargin 0;
$headingFont: Montserrat;
$headingColor: $white;
$headingLineHeight: 1.2;
$headingLetterSpacing: normal;
$headingTextTransform: uppercase;
$headingTextShadow: none;
$headingFontWeight: 600;
$heading1TextShadow: $headingTextShadow;

$heading1Size: 2.0em;
$heading2Size: 1.6em;
$heading3Size: 1.3em;
$heading4Size: 1.0em;

// Links and actions
$linkColor: $orient;
$linkColorHover: $daintree;

// Code
$preWidth: 100%;
$codeBackgroundColor: $white;
$codeColor: $mine-shaft;
$inlineCodeBackgroundColor: darken( $backgroundColor, 15% );

// Text selection
$selectionBackgroundColor: darken( $linkColor, 25% );
$selectionColor: $white;

// Generates the presentation background, can be overridden
// to return a background image or gradient
@mixin bodyBackground() {
  background: $backgroundColor;
}


// Theme template ------------------------------
@import "reveal-theme";
// ---------------------------------------------

.center {
  text-align: center;
  display: block;
  margin: 0 auto;
}

.reveal section img {
  border: none;
  box-shadow: none;
  background: transparent;
  display: block;
  margin: 0 auto;
}

.reveal section img.header {
  height: 30vh;
}

.reveal p {
  text-align: left;
}

.reveal ol, .reveal dl, .reveal ul {
  display: block;
}

div[role=application]:after {
  background: url({{ site.url }}/img/cargonaut.svg);
  position: fixed;
  z-index: 30;
  width: 26vh;
  height: 30vh;
  left: -5vh;
  bottom: -9vh;
  -webkit-user-select: none;
  -ms-transform: rotate(25deg);
  -webkit-transform: rotate(25deg);
  transform: rotate(25deg);
}

@font-face {
    font-family: 'Montserrat';
    src: url('{{ site.url }}/fonts/montserrat-bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Roboto Slab';
    src: url('{{ site.url }}/fonts/robotoslab-regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

